[package]
name = "hyperware_process_lib"
authors = ["Sybil Technologies AG"]
version = "2.2.0"
edition = "2021"
description = "A library for writing Hyperware processes in Rust."
homepage = "https://hyperware.ai"
repository = "https://github.com/hyperware-ai/process_lib"
license = "Apache-2.0"

[features]
hyperapp = ["dep:futures-util", "dep:uuid", "logging"]
logging = ["dep:color-eyre", "dep:tracing", "dep:tracing-error", "dep:tracing-subscriber"]
hyperwallet = []
simulation-mode = []

[dependencies]
alloy-primitives = "0.8.15"
alloy-sol-macro = "0.8.15"
alloy-sol-types = "0.8.15"
alloy = { version = "0.8.1", features = [
    "json-rpc",
    "rpc-client",
    "rpc-types",
    "signers",
    "signer-local",
    "consensus",
    "network",
] }
anyhow = "1.0"
base64 = "0.22.1"
bincode = "1.3.3"
http = "1.0.0"
mime_guess = "2.0"
rand = "0.8"
regex = "1.11.1"
rmp-serde = "1.1.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.120"
thiserror = "1.0"
url = "2.4.1"
wit-bindgen = "0.42.1"

futures-util = { version = "0.3", optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

color-eyre = { version = "0.6", features = ["capture-spantrace"], optional = true }
tracing = { version = "0.1", optional = true }
tracing-error = { version = "0.2", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json", "std"], optional = true }
